opam-version: "2.0"
maintainer: "team@robur.io"
authors: ["team@robur.io"]
homepage: "https://github.com/roburio/unikernels"
doc: "https://roburio.github.io/unikernels/doc"
dev-repo: "git+https://github.com/roburio/unikernels.git"
bug-reports: "https://github.com/roburio/unikernels/issues"
license: "public domain"

depends: [
  "lwt"
  "mirage" {>= "3.7.7"}
  "ocaml" {>= "4.08.0"}
]

synopsis: "Unikernels developed by the robur.io team"
